// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`factory custom not found 2! 1`] = `
<div>
  <div>
    Not Found
  </div>
</div>
`;

exports[`factory custom not found 3! 1`] = `
<div>
  <div>
    Not Found
  </div>
</div>
`;

exports[`factory custom not found! 1`] = `
<div>
  <div>
    Not Found
  </div>
</div>
`;

exports[`factory load Renderer on need 1`] = `
<div>
  <div>
    This is Custom Renderer2, a is 
    23
  </div>
</div>
`;

exports[`factory unregistered Renderer 1`] = `
<div>
  <div
    class="a-Alert a-Alert--danger"
  >
    <p>
      Error: 找不到对应的渲染器
    </p>
    <p>
      Path: 
      my-renderer
    </p>
    <pre>
      <code>
        {
  "type": "my-renderer",
  "a": 23
}
      </code>
    </pre>
  </div>
</div>
`;

exports[`factory:definitions 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-header"
        >
          <h2
            class="a-Page-title"
          >
            <span
              class="a-TplField"
            >
              <span>
                引用
              </span>
            </span>
          </h2>
        </div>
        <div
          class="a-Page-body"
        >
          <div
            class="a-Panel a-Panel--default a-Panel--form"
            style="position: relative;"
          >
            <div
              class="a-Panel-heading"
            >
              <h3
                class="a-Panel-title"
              >
                <span
                  class="a-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="a-Panel-body"
            >
              <form
                class="a-Form a-Form--normal"
                novalidate=""
              >
                <div
                  class="a-Form-item a-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="a-Form-label"
                  >
                    <span>
                      <span
                        class="a-TplField"
                      >
                        <span>
                          text2
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="a-Form-control a-TextControl"
                  >
                    <div
                      class="a-TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        name="ref1"
                        placeholder=""
                        size="10"
                        type="text"
                        value="ref value"
                      />
                    </div>
                  </div>
                  <div
                    class="a-Remark a-Form-remark"
                  >
                    <span
                      class="a-Remark-icon"
                    >
                      <icon-mock
                        classname=" icon-warning-mark"
                        icon="warning-mark"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="a-Form-item a-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="a-Form-label"
                  >
                    <span>
                      <span
                        class="a-TplField"
                      >
                        <span>
                          combo
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="a-ComboControl a-Form-control"
                  >
                    <div
                      class="a-Combo a-Combo--multi a-Combo--ver"
                    >
                      <div
                        class="a-Combo-items"
                      >
                        <div
                          class="a-Combo-item"
                        >
                          <div
                            class="a-Combo-itemInner"
                          >
                            <div
                              class="a-Form a-Form--normal a-Combo-form"
                              novalidate=""
                            >
                              <div
                                class="a-Form-item a-Form-item--normal"
                                data-role="form-item"
                              >
                                <label
                                  class="a-Form-label"
                                >
                                  <span>
                                    <span
                                      class="a-TplField"
                                    >
                                      <span>
                                        combo 1
                                      </span>
                                    </span>
                                  </span>
                                </label>
                                <div
                                  class="a-Form-control a-TextControl"
                                >
                                  <div
                                    class="a-TextControl-input"
                                  >
                                    <input
                                      autocomplete="off"
                                      name="key"
                                      placeholder=""
                                      size="10"
                                      type="text"
                                      value=""
                                    />
                                  </div>
                                </div>
                              </div>
                              <div
                                class="a-Form-item a-Form-item--normal"
                                data-role="form-item"
                              >
                                <label
                                  class="a-Form-label"
                                >
                                  <span>
                                    <span
                                      class="a-TplField"
                                    >
                                      <span>
                                        combo 2
                                      </span>
                                    </span>
                                  </span>
                                </label>
                                <div
                                  class="a-Form-control a-TextControl"
                                >
                                  <div
                                    class="a-TextControl-input"
                                  >
                                    <input
                                      autocomplete="off"
                                      name="value"
                                      placeholder=""
                                      size="10"
                                      type="text"
                                      value="ref value"
                                    />
                                  </div>
                                </div>
                                <div
                                  class="a-Remark a-Form-remark"
                                >
                                  <span
                                    class="a-Remark-icon"
                                  >
                                    <icon-mock
                                      classname=" icon-warning-mark"
                                      icon="warning-mark"
                                    />
                                  </span>
                                </div>
                              </div>
                              <div
                                class="a-Form-item a-Form-item--normal"
                                data-role="form-item"
                              >
                                <label
                                  class="a-Form-label"
                                >
                                  <span>
                                    <span
                                      class="a-TplField"
                                    >
                                      <span>
                                        children
                                      </span>
                                    </span>
                                  </span>
                                </label>
                                <div
                                  class="a-Remark a-Form-remark"
                                >
                                  <span
                                    class="a-Remark-icon"
                                  >
                                    <icon-mock
                                      classname=" icon-warning-mark"
                                      icon="warning-mark"
                                    />
                                  </span>
                                </div>
                              </div>
                              <input
                                style="display: none;"
                                type="submit"
                              />
                            </div>
                          </div>
                          <a
                            class="a-Combo-delBtn "
                            data-position="bottom"
                            data-tooltip="删除"
                          >
                            <icon-mock
                              classname="icon icon-close"
                              icon="close"
                            />
                          </a>
                        </div>
                      </div>
                      <div
                        class="a-Combo-toolbar"
                      >
                        <button
                          class="a-Button a-Combo-addBtn"
                          data-tooltip="新增"
                          type="button"
                        >
                          <icon-mock
                            classname="icon icon-plus"
                            icon="plus"
                          />
                          <span>
                            新增
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="a-Remark a-Form-remark"
                  >
                    <span
                      class="a-Remark-icon"
                    >
                      <icon-mock
                        classname=" icon-warning-mark"
                        icon="warning-mark"
                      />
                    </span>
                  </div>
                </div>
                <input
                  style="display: none;"
                  type="submit"
                />
              </form>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`factory:definitions override 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-header"
        >
          <h2
            class="a-Page-title"
          >
            <span
              class="a-TplField"
            >
              <span>
                引用
              </span>
            </span>
          </h2>
        </div>
        <div
          class="a-Page-body"
        >
          <div
            class="a-Panel a-Panel--default a-Panel--form"
            style="position: relative;"
          >
            <div
              class="a-Panel-heading"
            >
              <h3
                class="a-Panel-title"
              >
                <span
                  class="a-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="a-Panel-body"
            >
              <form
                class="a-Form a-Form--normal"
                novalidate=""
              >
                <div
                  class="a-Form-item a-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="a-Form-label"
                  >
                    <span>
                      <span
                        class="a-TplField"
                      >
                        <span>
                          text2
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="a-Form-control a-TextControl"
                  >
                    <div
                      class="a-TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        name="ref1"
                        placeholder=""
                        size="10"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="a-Remark a-Form-remark"
                  >
                    <span
                      class="a-Remark-icon"
                    >
                      <icon-mock
                        classname=" icon-warning-mark"
                        icon="warning-mark"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="a-Form-item a-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="a-Form-label"
                  >
                    <span>
                      <span
                        class="a-TplField"
                      >
                        <span>
                          combo
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="a-CheckboxesControl a-Form-control is-inline"
                  >
                    <label
                      class="a-Checkbox a-Checkbox--checkbox a-Checkbox--full"
                    >
                      <input
                        checked=""
                        type="checkbox"
                      />
                      <i />
                      <span
                        class=""
                      >
                        Option A
                      </span>
                    </label>
                    <label
                      class="a-Checkbox a-Checkbox--checkbox a-Checkbox--full"
                    >
                      <input
                        type="checkbox"
                      />
                      <i />
                      <span
                        class=""
                      >
                        Option B
                      </span>
                    </label>
                  </div>
                  <div
                    class="a-Remark a-Form-remark"
                  >
                    <span
                      class="a-Remark-icon"
                    >
                      <icon-mock
                        classname=" icon-warning-mark"
                        icon="warning-mark"
                      />
                    </span>
                  </div>
                </div>
                <input
                  style="display: none;"
                  type="submit"
                />
              </form>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`factory:registerRenderer 1`] = `
<div>
  <div>
    This is Custom Renderer, a is 
    23
  </div>
</div>
`;
